--- a/src/Pages/ConfirmatePage/confirmatePage.module.scss
+++ b/src/Pages/ConfirmatePage/confirmatePage.module.scss
@@ -28,7 +28,7 @@
     }
 }
 
-@media (max-width: 375px) {
+@media screen and (max-width: 470px) {
     .containerPage {
         height: 50vh;
         width: 80%;
