--- a/src/Pages/DefaultPage/defaultPage.module.scss
+++ b/src/Pages/DefaultPage/defaultPage.module.scss
@@ -11,15 +11,15 @@
     }
 }
 
-@media (max-width: 375px) {
+@media screen and (max-width: 470px) {
     .mainContainer {
         height: 100vh;
         width: 100vw;
         background-color: #ECF3FD;
         .contentContainer {
-            background-image: url('../../../public/assets/images/bg-sidebar-mobile.svg');
+
             background-repeat: no-repeat;
-            background-size: 375px 172px;
+            background-size: 470px 172px;
             display: block;
             padding-top: 0px;
             height: auto;
