--- a/src/Pages/InicitalPage/inicialPage.module.scss
+++ b/src/Pages/InicitalPage/inicialPage.module.scss
@@ -14,7 +14,7 @@ form {
 
             .containerUser {
                 display: grid;
-                
+
                 label {
                     color: $marine-blue;
                     font-family: $font-regular;
@@ -45,7 +45,7 @@ form {
                         outline: none;
                     }
                 }
-                
+
                 .error {
                     grid-column: span 2;
                     border: 1px solid red;
@@ -61,16 +61,18 @@ form {
     }
 }
 
-@media (max-width: 375px) {
+@media screen and (max-width: 470px) {
     form {
         section:nth-child(1) {
             background-color: #FFFFFF;
             border-radius: 24px;
             padding: 30px 20px;
         }
+
         section:nth-child(2) {
             background-color: #FFFFFF;
             padding: 0px 17.5px;
+            
         }
     }
 }
