--- a/src/Pages/SummaryPage/summaryPage.module.scss
+++ b/src/Pages/SummaryPage/summaryPage.module.scss
@@ -138,11 +138,15 @@
     }
 
 
-@media (max-width: 375px) {
+@media screen and (max-width: 470px) {
         .summaryPage {
             background-color: #FFFFFF;
             border-radius: 24px;
             padding: 30px 20px;
+            position: absolute;
+            left: 50px;
+            width: 70vw;
+            top: 100px;
         }
         
         .twoButtons {
